# oef-core

./: .gitignore  CMakeLists.txt  INSTALL.txt  Jenkinsfile  README.md
3rd/: CMakeLists.txt
apps/: CMakeLists.txt
apps/node/: CMakeLists.txt
apps/node/src/: main.cpp
lib/: CMakeLists.txt
lib/benchmark/: CMakeLists.txt
lib/benchmark/src/: hayai_posix_main.cpp  serialization.cpp
lib/include/: agentdirectory.hpp  clientmsg.hpp  common.hpp  logger.hpp  schema.hpp  server.hpp  servicedirectory.hpp
lib/src/: common.cpp  logger.cpp  schema.cpp  server.cpp
lib/test/: CMakeLists.txt
lib/test/src/: messages.cpp  schema.cpp
oef-core-image/: Dockerfile  Dockerfile.production.OEFNode  build-prod-oef-node.py  docker-env.sh
scripts/: build-cmake.sh  build-test.sh  check-license-header.py  code-coverage-generate-gcov.sh  code-coverage-generate-llvm.sh  code-format-apply.sh  code-helpers.sh  code-lint-apply.sh  code-static-analyze-clang.sh  code-static-analyze-cppcheck.sh  docker-code-coverage-generate-gcov.sh
